# Meta_Pytorch_Hackathon

./: Dockerfile  README.md  environment.py  index.html  inference.py  main.py  models.py  requirements.txt  task2_medium.py
incident-response-triage/: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
incident-response-triage/server/: __init__.py  app.py  environment.py  models.py
incident-response-triage/server/tasks/: task1_easy.py  task2_medium.py  task3_hard.py
