[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build-meta"

[project]
name = "incident-response-triage"
version = "1.0.0"
description = "An OpenEnv environment for Incident Response Triage."
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.1",
    "openai>=2.7.2",       # Updated to satisfy openenv-core
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.1",
    "aiofiles>=23.2.1",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[project.urls]
"Homepage" = "https://huggingface.co/spaces/KeyaChaudhary/incident-response-triage"